--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet">
 
     <!--Estilo CSS-->
-    <link rel="stylesheet" href="https://github.com/raillen/hotel-paraiso-flexbox/tree/main/_recursos/css">
+    <link rel="stylesheet" href="https://github.com/raillen/hotel-paraiso-flexbox/tree/main/_recursos/css/style.css">
 
     <title>Hotel Paraiso</title>
 </head>
