correção dos endereços de arquivo e nome da pasta.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet">
 
     <!--Estilo CSS-->
-    <link rel="stylesheet" href="_recursos/css/style.css">
+    <link rel="stylesheet" href="recursos/css/style.css">
 
     <title>Hotel Paraiso</title>
 </head>
 <body>
-    
+
     <header class="header">
         <a href="#" class="logo">
-            <img src="_recursos/img/logo.png" alt="Hotel Paraíso">
+            <img src="recursos/img/logo.png" alt="Hotel Paraíso">
         </a>
         <nav class="navbar">
             <li><a href="#">Home</a></li>
@@ -43,10 +43,10 @@
 
            <!--Grid de fotos-->
            <ul class="grid">
-               <li class="grid-small" style="background-image: url(_recursos/img/itacare-01.jpg);"></li>
-               <li class="grid-large" style="background-image: url(_recursos/img/itacare-02.jpg);"></li>
-               <li class="grid-large" style="background-image: url(_recursos/img/itacare-03.jpg);"></li>
-               <li class="grid-small" style="background-image: url(_recursos/img/itacare-04.jpg);"></li>
+               <li class="grid-small" style="background-image: url(recursos/img/itacare-01.jpg);"></li>
+               <li class="grid-large" style="background-image: url(recursos/img/itacare-02.jpg);"></li>
+               <li class="grid-large" style="background-image: url(recursos/img/itacare-03.jpg);"></li>
+               <li class="grid-small" style="background-image: url(recursos/img/itacare-04.jpg);"></li>
            </ul>
        </section>
 
